--- a/index.html
+++ b/index.html
@@ -57,6 +57,39 @@
             <h1>Reported posts</h1>
         </div>
     </main>
+
+    <section class="container mb-5">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h1 class="card-title">How does JavaScript Work?</h1>
+                        <p class="card-text">JavaScript is a client-side scripting language and one of the most
+                            efficient, web-browsers commonly used scripting languages
+                            The DOM presents a live view of the web page to your JavaScript code.Once this is done, the
+                            JavaScript is executed in the order the code is written. This results in the DOM being
+                            updated by JavaScript code and rendered by the browser.client-side scripting language means
+                            that it runs at the client-side</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h1 class="card-title">what does javascript event loop do?</h1>
+                        <p class="card-text">JavaScript has a runtime model based on an event loop, which is responsible
+                            for executing the code, collecting and processing events, and executing queued sub-tasks.
+                            This model is quite different from models in other languages like C and Java, This article
+                            focuses on one of the very important but seldom understood concepts or terms in JavaScript.
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer></footer>
 
     <!-- add javascript  file  -->
